# energy-generation-graph

./: .gitignore  README.md  Resources.docx  energy-generation.ipynb  pyproject.toml
Data_Visualization/: A Graphical Representation of Energy Generation in the United States.ipynb  Data.ipynb
Raw_Data/: Data.xlsx
