[tool.poetry]
name = "energy-generation-graph"
version = "0.1.0"
description = "A graphical representation of energy generation in the US."
authors = ["wuihee <wuihee@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.2"
pandas = "^2.2.2"
matplotlib = "^3.9.0"
numpy = "^1.26.4"
jupyter = "^1.0.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
